Fix contact main section alignment issue [ch1035]
Fix contact main section alignment issue [ch1035]

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -410,6 +410,7 @@ a {
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
+          justify-content: center;
 }
 
 /* media queries */
